--- a/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Query/_Tab3_Layout.cshtml
@@ -19,6 +19,8 @@
             <th>Defect Code</th>
             <th>Defect Qty</th>
             <th>Defect Photo</th>
+            <th>Defect Area</th>
+            <th>Remark</th>
         </tr>
     </thead>
     <tbody>
@@ -34,6 +36,8 @@
                     <img src="/Image/Icon/Picture.png" style="cursor: pointer;" onclick="OpenDefectPicture(@item.Ukey,@item.RowIndex)" width="25" height="25" />
                 }
             </td>
+            <td>@item.AreaCode</td>
+            <td>@item.Remark</td>
         </tr>
         }
     </tbody>
