--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -342,7 +342,7 @@
                             <th>Packing List ID</th>
                             <th>CTN No</th>
                             <th>Size</th>
-                            <th>Size/Qty</th>
+                            <th>Qty</th>
                             <th>SP</th>
                         </tr>
                     </thead>
